// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/layout/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-header"
    >
      Header
    </div>
    <div
      class="ant-layout-content"
    >
      Content
    </div>
    <div
      class="ant-layout-footer"
    >
      Footer
    </div>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-header"
    >
      Header
    </div>
    <div
      class="ant-layout"
    >
      <div
        class="ant-layout-sider ant-layout-sider-dark"
        style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="ant-layout-sider-children"
        >
          Sider
        </div>
      </div>
      <div
        class="ant-layout-content"
      >
        Content
      </div>
    </div>
    <div
      class="ant-layout-footer"
    >
      Footer
    </div>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-header"
    >
      Header
    </div>
    <div
      class="ant-layout"
    >
      <div
        class="ant-layout-content"
      >
        Content
      </div>
      <div
        class="ant-layout-sider ant-layout-sider-dark"
        style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="ant-layout-sider-children"
        >
          Sider
        </div>
      </div>
    </div>
    <div
      class="ant-layout-footer"
    >
      Footer
    </div>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-sider ant-layout-sider-dark"
      style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
    >
      <div
        class="ant-layout-sider-children"
      >
        Sider
      </div>
    </div>
    <div
      class="ant-layout"
    >
      <div
        class="ant-layout-header"
      >
        Header
      </div>
      <div
        class="ant-layout-content"
      >
        Content
      </div>
      <div
        class="ant-layout-footer"
      >
        Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/custom-trigger.md correctly 1`] = `
<div
  class="ant-layout"
>
  <div
    class="ant-layout-sider ant-layout-sider-dark"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-user"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="user"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M819.4 793c-16.8-39.7-40.9-75.4-71.5-106-30.6-30.6-66.3-54.7-106-71.5-13.5-5.7-27.4-10.5-41.4-14.4 39.6-13.4 75.9-35.8 106.3-66.2 52-52 80.7-121.2 80.7-194.7s-28.6-142.7-80.7-194.7c-52-52-121.2-80.7-194.7-80.7s-142.7 28.6-194.7 80.7c-52 52-80.7 121.2-80.7 194.7s28.6 142.7 80.7 194.7c30.4 30.4 66.7 52.8 106.3 66.2-14 3.9-27.9 8.6-41.4 14.4-39.7 16.8-75.4 40.9-106 71.5-30.6 30.6-54.7 66.3-71.5 106-17.4 41.2-26.2 84.8-26.2 129.9 0 19.9 16.1 36 36 36s36-16.1 36-36c0-69.9 27.2-135.6 76.6-185 49.4-49.4 115.1-76.6 185-76.6s135.6 27.2 185 76.6 76.6 115.1 76.6 185c0 19.9 16.1 36 36 36s36-16.1 36-36c-.2-45.1-9-88.7-26.4-129.9zM308.6 340.2c0-112.2 91.3-203.4 203.4-203.4S715.4 228 715.4 340.2 624.2 543.6 512 543.6s-203.4-91.3-203.4-203.4z"
              />
            </svg>
          </i>
          <span>
            nav 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-video-camera"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="video-camera"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M1010.3 322.7c-7.2-6.2-16.3-9.7-25.8-9.7-6.5 0-12.9 1.6-18.6 4.7l-125.6 67V197.3c0-39.3-31.9-71.3-71-71.3H71c-39.1 0-71 32-71 71.3v629.4C0 866 31.9 898 71 898h698.4c39.1 0 71-32 71-71.3V624.2l122.9 78.4c6.4 4.1 13.7 6.2 21.2 6.2 9 0 17.9-3.2 25-8.9 9.2-7.6 14.5-19 14.5-31.3V353.4c0-12-5-23.2-13.7-30.7zM945 418.8v178.1l-103.2-65.8v-57.3l103.2-55zm-183.6-190V795c0 13-10.5 23.6-23.5 23.6H102.5C89.5 818.6 79 808 79 795V228.8c0-13 10.5-23.6 23.5-23.6h635.4c13 0 23.5 10.6 23.5 23.6z"
              />
            </svg>
          </i>
          <span>
            nav 2
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-upload"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="upload"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M487.5 74.1C494.2 67.4 503.1 64 512 64s17.7 3.4 24.5 10.1L692.3 230c13.5 13.5 13.5 35.4 0 48.9-6.5 6.5-15.2 10.1-24.4 10.1s-17.9-3.6-24.4-10.1L546.6 182v577.8c0 19.1-15.5 34.6-34.6 34.6s-34.6-15.5-34.6-34.6V182l-96.9 96.9c-13.5 13.5-35.4 13.5-48.8 0-13.5-13.5-13.5-35.4-.1-48.9L487.5 74.1z"
              />
              <path
                d="M924.4 640.4c-19.1 0-34.6 15.5-34.6 34.6v195.4c0 11.3-9.2 20.6-20.6 20.6H152.7c-11.3 0-20.6-9.2-20.6-20.6V674.9c0-19.1-15.5-34.6-34.6-34.6S63 655.9 63 674.9v222.9c0 34.3 27.9 62.1 62.1 62.1h771.8c34.3 0 62.1-27.9 62.1-62.1V674.9c0-19-15.5-34.5-34.6-34.5z"
              />
            </svg>
          </i>
          <span>
            nav 3
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-header"
      style="background:#fff;padding:0"
    >
      <i
        class="anticon anticon-menu-fold trigger"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="menu-fold"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M112 224h800c26.5 0 48-21.5 48-48s-21.5-48-48-48H112c-26.5 0-48 21.5-48 48s21.5 48 48 48zm0 336h480c26.5 0 48-21.5 48-48s-21.5-48-48-48H112c-26.5 0-48 21.5-48 48s21.5 48 48 48zm669.3-204.4c-1.5-1.3-3.3-2-5.3-2-4.4 0-8 3.6-8 8v300.3c0 1.9.7 3.8 2 5.3 2.9 3.3 8 3.7 11.3.8l165.1-144c.5-.5 1.1-1 1.5-1.5 5.8-6.7 5.1-16.8-1.5-22.6L781.3 355.6zM912 800H112c-26.5 0-48 21.5-48 48s21.5 48 48 48h800c26.5 0 48-21.5 48-48s-21.5-48-48-48z"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-layout-content"
      style="margin:24px 16px;padding:24px;background:#fff;min-height:280px"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/fixed.md correctly 1`] = `
<div
  class="ant-layout"
>
  <div
    class="ant-layout-header"
    style="position:fixed;z-index:1;width:100%"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
    </ul>
  </div>
  <div
    class="ant-layout-content"
    style="padding:0 50px;margin-top:64px"
  >
    <div
      class="ant-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          List
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          App
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      style="background:#fff;padding:24px;min-height:380px"
    >
      Content
    </div>
  </div>
  <div
    class="ant-layout-footer"
    style="text-align:center"
  >
    Ant Design ©2018 Created by Ant UED
  </div>
</div>
`;

exports[`renders ./components/layout/demo/fixed-sider.md correctly 1`] = `
<div
  class="ant-layout"
>
  <div
    class="ant-layout-sider ant-layout-sider-dark"
    style="overflow:auto;height:100vh;position:fixed;left:0;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-user"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="user"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M819.4 793c-16.8-39.7-40.9-75.4-71.5-106-30.6-30.6-66.3-54.7-106-71.5-13.5-5.7-27.4-10.5-41.4-14.4 39.6-13.4 75.9-35.8 106.3-66.2 52-52 80.7-121.2 80.7-194.7s-28.6-142.7-80.7-194.7c-52-52-121.2-80.7-194.7-80.7s-142.7 28.6-194.7 80.7c-52 52-80.7 121.2-80.7 194.7s28.6 142.7 80.7 194.7c30.4 30.4 66.7 52.8 106.3 66.2-14 3.9-27.9 8.6-41.4 14.4-39.7 16.8-75.4 40.9-106 71.5-30.6 30.6-54.7 66.3-71.5 106-17.4 41.2-26.2 84.8-26.2 129.9 0 19.9 16.1 36 36 36s36-16.1 36-36c0-69.9 27.2-135.6 76.6-185 49.4-49.4 115.1-76.6 185-76.6s135.6 27.2 185 76.6 76.6 115.1 76.6 185c0 19.9 16.1 36 36 36s36-16.1 36-36c-.2-45.1-9-88.7-26.4-129.9zM308.6 340.2c0-112.2 91.3-203.4 203.4-203.4S715.4 228 715.4 340.2 624.2 543.6 512 543.6s-203.4-91.3-203.4-203.4z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-video-camera"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="video-camera"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M1010.3 322.7c-7.2-6.2-16.3-9.7-25.8-9.7-6.5 0-12.9 1.6-18.6 4.7l-125.6 67V197.3c0-39.3-31.9-71.3-71-71.3H71c-39.1 0-71 32-71 71.3v629.4C0 866 31.9 898 71 898h698.4c39.1 0 71-32 71-71.3V624.2l122.9 78.4c6.4 4.1 13.7 6.2 21.2 6.2 9 0 17.9-3.2 25-8.9 9.2-7.6 14.5-19 14.5-31.3V353.4c0-12-5-23.2-13.7-30.7zM945 418.8v178.1l-103.2-65.8v-57.3l103.2-55zm-183.6-190V795c0 13-10.5 23.6-23.5 23.6H102.5C89.5 818.6 79 808 79 795V228.8c0-13 10.5-23.6 23.5-23.6h635.4c13 0 23.5 10.6 23.5 23.6z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 2
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-upload"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="upload"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M487.5 74.1C494.2 67.4 503.1 64 512 64s17.7 3.4 24.5 10.1L692.3 230c13.5 13.5 13.5 35.4 0 48.9-6.5 6.5-15.2 10.1-24.4 10.1s-17.9-3.6-24.4-10.1L546.6 182v577.8c0 19.1-15.5 34.6-34.6 34.6s-34.6-15.5-34.6-34.6V182l-96.9 96.9c-13.5 13.5-35.4 13.5-48.8 0-13.5-13.5-13.5-35.4-.1-48.9L487.5 74.1z"
              />
              <path
                d="M924.4 640.4c-19.1 0-34.6 15.5-34.6 34.6v195.4c0 11.3-9.2 20.6-20.6 20.6H152.7c-11.3 0-20.6-9.2-20.6-20.6V674.9c0-19.1-15.5-34.6-34.6-34.6S63 655.9 63 674.9v222.9c0 34.3 27.9 62.1 62.1 62.1h771.8c34.3 0 62.1-27.9 62.1-62.1V674.9c0-19-15.5-34.5-34.6-34.5z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 3
          </span>
        </li>
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-bar-chart"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="bar-chart"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M923 960H99c-19.9 0-36-16.1-36-36V100c0-19.9 16.1-36 36-36s36 16.1 36 36v788h788c19.9 0 36 16.1 36 36s-16.1 36-36 36z"
              />
              <path
                d="M264.2 373c-39.3.9-71.4 33.1-72.2 72.4-.6 30.1 16.7 56.2 42 68.3V799c0 17.7 14.3 32 32 32s32-14.3 32-32V513.7c24.8-11.9 42-37.3 42-66.7 0-41.5-34.1-75-75.8-74zM541.7 255c-39.3.9-71.4 33.1-72.2 72.4-.6 30.1 16.7 56.2 42 68.3V799c0 17.7 14.3 32 32 32s32-14.3 32-32V395.7c24.8-11.9 42-37.3 42-66.7 0-41.5-34.1-75-75.8-74zM895 458c0-41.5-34.1-75-75.8-74-39.3.9-71.4 33.1-72.2 72.4-.6 30.1 16.7 56.2 42 68.3V799c0 17.7 14.3 32 32 32s32-14.3 32-32V524.7c24.8-11.9 42-37.3 42-66.7z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 4
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-cloud-o"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="cloud-o"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M702.3 861.3H297.9c-31.8 0-62.1-5.8-90.2-17.1-27.9-11.3-53.7-28.2-76.4-50.3-23-22.3-40.7-47.8-52.5-75.7-11.9-28-18-58.4-18-90.3 0-55 17.8-104.4 52.9-146.8 12.6-15.3 26.8-28.9 42.4-40.4.2-24.8 5.1-48.5 14.5-70.6 9.3-22.2 23.4-42.6 41.8-60.6l.1-.1c18.1-17.6 38.7-31.1 61.2-40.2 22.5-9.1 46.7-13.7 71.8-13.7 8.5 0 16.8.5 25 1.5 15.8-17.4 33.9-33 54-46.4 47.3-31.7 100.8-47.8 158.9-47.8 38.5 0 75 6.9 108.5 20.5 33.8 13.6 64.7 34 92 60.6 27.5 26.9 48.7 57.3 62.8 90.6 9.5 22.2 15.8 45.7 19 70.3 21.3 16.8 39.9 37 55.3 60.2l7.3 10.9v.7c23.2 39.2 35 82.2 35 128.2 0 34.8-6.7 68.2-19.8 99.1-13.1 30.7-32.5 58.7-57.6 83.1-25 24.3-53.3 43-84.3 55.6-31 12.4-64.3 18.7-99.3 18.7zM262.6 360.9c-11.5 11.2-20.2 23.7-25.7 37l-.1.2c-5.8 13.7-8.8 28.6-8.8 44.3 0 4.4.2 8.7.7 13l2.5 22.9-19.7 11.8c-15.9 9.5-30.1 21.9-42.2 36.7l-.1.2c-24.2 29.2-36.4 63.1-36.4 100.9 0 22.1 4.1 43 12.3 62.1 8.1 19.1 20.3 36.6 36.4 52.2 16.1 15.6 34 27.5 53.3 35.3 19.4 7.9 40.6 11.9 63.1 11.9h404.4c25.7 0 50-4.6 72.2-13.5 22.2-9 42.8-22.6 61.1-40.4 18.3-17.8 32.3-37.9 41.6-59.7 9.3-21.9 14-45.8 14-70.9 0-35.5-9.8-68.5-29.2-98.3l-2.3-3.5c-13.3-19.5-29.7-36-48.7-49l-14.4-9.8-1.2-17.4c-1.6-22.7-6.7-44.3-15.2-64.1-10.4-24.5-26.2-47.1-46.9-67.3-20.5-20-43.6-35.3-68.7-45.4-24.9-10.1-52.3-15.2-81.5-15.2-43.6 0-83.6 12-118.9 35.6-20.1 13.4-37.4 29.5-51.4 47.7L398.3 337l-23-5.9c-9.5-2.4-19.7-3.6-30.2-3.6-15.8 0-30.9 2.8-44.8 8.4-13.5 5.5-26.3 13.9-37.7 25z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 5
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-appstore-o"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="appstore-o"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M398 136v262H136V136h262m0-72H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zm490 72v262H626V136h262m0-72H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zM398 626v262H136V626h262m0-72H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72zm490 72v262H626V626h262m0-72H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 6
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-team"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="team"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M839.1 487.4c-19.9-19.9-42.5-35.6-67.5-46.9 29-15.3 53.8-37.5 72.4-64.9 22.7-33.4 34.7-72.4 34.7-113 0-110.9-90.2-201.1-201.1-201.1-42 0-82.2 12.8-116.3 37-29.7 21.1-52.9 49.4-67.5 82.4-38-40.9-90.9-64.2-147.3-64.2-110.9 0-201.1 90.2-201.1 201.1 0 40.5 12 79.5 34.7 112.9 18.6 27.4 43.4 49.6 72.4 65-25 11.3-47.7 27-67.5 46.9-43.3 43.3-67.2 100.7-67.2 161.6v164.7c0 50 40.7 90.8 90.8 90.8h276c36.4 0 69.3-22 83.5-55.2h247.7c50 0 90.8-40.7 90.8-90.8V648.9c-.3-60.9-24.1-118.3-67.5-161.5zM585.7 170.7c24.5-24.6 57.1-38.1 91.9-38.1 34.8 0 67.4 13.5 91.9 38.1 24.6 24.5 38.1 57.1 38.1 91.9S794 330 769.5 354.5c-24.5 24.6-57.1 38.1-91.9 38.1-34.8 0-67.4-13.5-91.9-38.1-24.6-24.5-38.1-57.1-38.1-91.9s13.5-67.4 38.1-91.9zM216.4 317.8c0-34.8 13.5-67.4 38.1-91.9 24.5-24.6 57.1-38.1 91.9-38.1 34.8 0 67.4 13.5 91.9 38.1 24.6 24.6 38.1 57.2 38.1 91.9 0 34.8-13.5 67.4-38.1 91.9-24.5 24.6-57.1 38.1-91.9 38.1-34.7 0-67.4-13.5-92-38.1-24.5-24.5-38-57.2-38-91.9zm287.6 551c0 5.2-2 10.1-5.8 13.8-3.7 3.7-8.6 5.8-13.8 5.8h-276c-10.8 0-19.6-8.8-19.6-19.6V704.1c0-41.9 16.4-81.4 46.3-111.3 29.9-29.9 69.4-46.3 111.3-46.3 41.9 0 81.4 16.4 111.3 46.3.5.5 1 1 1.3 1.4l.3.4c28.8 29.6 44.7 68.5 44.7 109.6v164.6zm-17.6-345.3c-14.3-11.2-29.7-20.5-46-27.9 39.7-21.1 71.5-55 89.8-96.1 15.4 16.5 33.4 30.4 53.3 40.9-25 11.3-47.7 27.1-67.5 46.9-11.1 11.2-21 23.3-29.6 36.2zm348.8 290.2c0 10.8-8.8 19.6-19.6 19.6H575.2V704.1c0-45.3-13.2-88.8-38.2-126.2 7.6-14.9 17.4-28.4 29.3-40.2 29.8-29.9 69.4-46.4 111.3-46.4 41.9 0 81.4 16.4 111.3 46.3 29.9 29.9 46.3 69.4 46.3 111.3v164.8z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 7
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-shop"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="shop"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M860 604c-19.9 0-36 16.1-36 36v248H200V640c0-19.9-16.1-36-36-36s-36 16.1-36 36v248c0 39.8 32.2 72 72 72h624c39.8 0 72-32.2 72-72V640c0-19.9-16.1-36-36-36zm28-540H136c-39.8 0-72 32.2-72 72v203.5C64 435.3 141.7 513 237.5 513c56 0 105.8-26.5 137.5-67.7 31.7 41.2 81.5 67.7 137.5 67.7 55.7 0 105.3-26.2 137-67 31.7 40.8 81.3 67 137 67 95.8 0 173.5-77.7 173.5-173.5V136c0-39.8-32.2-72-72-72zM339 237.5v102c0 56.1-45.4 101.5-101.5 101.5S136 395.6 136 339.5V136h203v101.5zM512.5 441C456.4 441 411 395.6 411 339.5V136h202v203.5c0 3.8.1 7.6.4 11.4-5.7 50.7-48.7 90.1-100.9 90.1zM888 339.5c0 56.1-45.4 101.5-101.5 101.5S685 395.6 685 339.5V136h203v203.5z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 8
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ant-layout"
    style="margin-left:200px"
  >
    <div
      class="ant-layout-header"
      style="background:#fff;padding:0"
    />
    <div
      class="ant-layout-content"
      style="margin:24px 16px 0;overflow:initial"
    >
      <div
        style="padding:24px;background:#fff;text-align:center"
      >
        ...
        <br />
        Really
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        long
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        content
      </div>
    </div>
    <div
      class="ant-layout-footer"
      style="text-align:center"
    >
      Ant Design ©2018 Created by Ant UED
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/responsive.md correctly 1`] = `
<div
  class="ant-layout"
>
  <div
    class="ant-layout-sider ant-layout-sider-dark"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-user"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="user"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M819.4 793c-16.8-39.7-40.9-75.4-71.5-106-30.6-30.6-66.3-54.7-106-71.5-13.5-5.7-27.4-10.5-41.4-14.4 39.6-13.4 75.9-35.8 106.3-66.2 52-52 80.7-121.2 80.7-194.7s-28.6-142.7-80.7-194.7c-52-52-121.2-80.7-194.7-80.7s-142.7 28.6-194.7 80.7c-52 52-80.7 121.2-80.7 194.7s28.6 142.7 80.7 194.7c30.4 30.4 66.7 52.8 106.3 66.2-14 3.9-27.9 8.6-41.4 14.4-39.7 16.8-75.4 40.9-106 71.5-30.6 30.6-54.7 66.3-71.5 106-17.4 41.2-26.2 84.8-26.2 129.9 0 19.9 16.1 36 36 36s36-16.1 36-36c0-69.9 27.2-135.6 76.6-185 49.4-49.4 115.1-76.6 185-76.6s135.6 27.2 185 76.6 76.6 115.1 76.6 185c0 19.9 16.1 36 36 36s36-16.1 36-36c-.2-45.1-9-88.7-26.4-129.9zM308.6 340.2c0-112.2 91.3-203.4 203.4-203.4S715.4 228 715.4 340.2 624.2 543.6 512 543.6s-203.4-91.3-203.4-203.4z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-video-camera"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="video-camera"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M1010.3 322.7c-7.2-6.2-16.3-9.7-25.8-9.7-6.5 0-12.9 1.6-18.6 4.7l-125.6 67V197.3c0-39.3-31.9-71.3-71-71.3H71c-39.1 0-71 32-71 71.3v629.4C0 866 31.9 898 71 898h698.4c39.1 0 71-32 71-71.3V624.2l122.9 78.4c6.4 4.1 13.7 6.2 21.2 6.2 9 0 17.9-3.2 25-8.9 9.2-7.6 14.5-19 14.5-31.3V353.4c0-12-5-23.2-13.7-30.7zM945 418.8v178.1l-103.2-65.8v-57.3l103.2-55zm-183.6-190V795c0 13-10.5 23.6-23.5 23.6H102.5C89.5 818.6 79 808 79 795V228.8c0-13 10.5-23.6 23.5-23.6h635.4c13 0 23.5 10.6 23.5 23.6z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 2
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-upload"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="upload"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M487.5 74.1C494.2 67.4 503.1 64 512 64s17.7 3.4 24.5 10.1L692.3 230c13.5 13.5 13.5 35.4 0 48.9-6.5 6.5-15.2 10.1-24.4 10.1s-17.9-3.6-24.4-10.1L546.6 182v577.8c0 19.1-15.5 34.6-34.6 34.6s-34.6-15.5-34.6-34.6V182l-96.9 96.9c-13.5 13.5-35.4 13.5-48.8 0-13.5-13.5-13.5-35.4-.1-48.9L487.5 74.1z"
              />
              <path
                d="M924.4 640.4c-19.1 0-34.6 15.5-34.6 34.6v195.4c0 11.3-9.2 20.6-20.6 20.6H152.7c-11.3 0-20.6-9.2-20.6-20.6V674.9c0-19.1-15.5-34.6-34.6-34.6S63 655.9 63 674.9v222.9c0 34.3 27.9 62.1 62.1 62.1h771.8c34.3 0 62.1-27.9 62.1-62.1V674.9c0-19-15.5-34.5-34.6-34.5z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 3
          </span>
        </li>
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-user"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="user"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M819.4 793c-16.8-39.7-40.9-75.4-71.5-106-30.6-30.6-66.3-54.7-106-71.5-13.5-5.7-27.4-10.5-41.4-14.4 39.6-13.4 75.9-35.8 106.3-66.2 52-52 80.7-121.2 80.7-194.7s-28.6-142.7-80.7-194.7c-52-52-121.2-80.7-194.7-80.7s-142.7 28.6-194.7 80.7c-52 52-80.7 121.2-80.7 194.7s28.6 142.7 80.7 194.7c30.4 30.4 66.7 52.8 106.3 66.2-14 3.9-27.9 8.6-41.4 14.4-39.7 16.8-75.4 40.9-106 71.5-30.6 30.6-54.7 66.3-71.5 106-17.4 41.2-26.2 84.8-26.2 129.9 0 19.9 16.1 36 36 36s36-16.1 36-36c0-69.9 27.2-135.6 76.6-185 49.4-49.4 115.1-76.6 185-76.6s135.6 27.2 185 76.6 76.6 115.1 76.6 185c0 19.9 16.1 36 36 36s36-16.1 36-36c-.2-45.1-9-88.7-26.4-129.9zM308.6 340.2c0-112.2 91.3-203.4 203.4-203.4S715.4 228 715.4 340.2 624.2 543.6 512 543.6s-203.4-91.3-203.4-203.4z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 4
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-header"
      style="background:#fff;padding:0"
    />
    <div
      class="ant-layout-content"
      style="margin:24px 16px 0"
    >
      <div
        style="padding:24px;background:#fff;min-height:360px"
      >
        content
      </div>
    </div>
    <div
      class="ant-layout-footer"
      style="text-align:center"
    >
      Ant Design ©2018 Created by Ant UED
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/side.md correctly 1`] = `
<div
  class="ant-layout"
  style="min-height:100vh"
>
  <div
    class="ant-layout-sider ant-layout-sider-dark ant-layout-sider-has-trigger"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-pie-chart"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="pie-chart"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M466.502 1024c129.003 0 245.8-52.207 330.292-136.601l-330.292-328.69V93.593C208.905 93.593 0 301.796 0 558.71s208.905 465.29 466.502 465.29zM530.8 491.697h493.2C1024 220.097 803.103 0 530.8 0v491.697zm26.191 65.293l331.6 327.303c83.594-84.003 135.195-199.706 135.195-327.303H556.99z"
              />
            </svg>
          </i>
          <span>
            Option 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-desktop"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="desktop"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M902 130H123.2C91.7 130 66 155.7 66 187.2V667c0 31.5 25.7 57.2 57.2 57.2H480v107.9H332.7c-17.4 0-31.6 14.2-31.6 31.6 0 17.4 14.2 31.6 31.6 31.6h358.4c17.4 0 31.6-14.2 31.6-31.6 0-17.4-14.2-31.6-31.6-31.6H543.2V724.2H902c31.5 0 57.2-25.7 57.2-57.2V187.2c0-31.5-25.7-57.2-57.2-57.2zm-6 63.2V661H129.2V193.2H896z"
              />
            </svg>
          </i>
          <span>
            Option 2
          </span>
        </li>
        <li
          class="ant-menu-submenu ant-menu-submenu-inline"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            style="padding-left:24px"
          >
            <span>
              <i
                class="anticon anticon-user"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="user"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M819.4 793c-16.8-39.7-40.9-75.4-71.5-106-30.6-30.6-66.3-54.7-106-71.5-13.5-5.7-27.4-10.5-41.4-14.4 39.6-13.4 75.9-35.8 106.3-66.2 52-52 80.7-121.2 80.7-194.7s-28.6-142.7-80.7-194.7c-52-52-121.2-80.7-194.7-80.7s-142.7 28.6-194.7 80.7c-52 52-80.7 121.2-80.7 194.7s28.6 142.7 80.7 194.7c30.4 30.4 66.7 52.8 106.3 66.2-14 3.9-27.9 8.6-41.4 14.4-39.7 16.8-75.4 40.9-106 71.5-30.6 30.6-54.7 66.3-71.5 106-17.4 41.2-26.2 84.8-26.2 129.9 0 19.9 16.1 36 36 36s36-16.1 36-36c0-69.9 27.2-135.6 76.6-185 49.4-49.4 115.1-76.6 185-76.6s135.6 27.2 185 76.6 76.6 115.1 76.6 185c0 19.9 16.1 36 36 36s36-16.1 36-36c-.2-45.1-9-88.7-26.4-129.9zM308.6 340.2c0-112.2 91.3-203.4 203.4-203.4S715.4 228 715.4 340.2 624.2 543.6 512 543.6s-203.4-91.3-203.4-203.4z"
                  />
                </svg>
              </i>
              <span>
                User
              </span>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
          <div />
        </li>
        <li
          class="ant-menu-submenu ant-menu-submenu-inline"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            style="padding-left:24px"
          >
            <span>
              <i
                class="anticon anticon-team"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="team"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M839.1 487.4c-19.9-19.9-42.5-35.6-67.5-46.9 29-15.3 53.8-37.5 72.4-64.9 22.7-33.4 34.7-72.4 34.7-113 0-110.9-90.2-201.1-201.1-201.1-42 0-82.2 12.8-116.3 37-29.7 21.1-52.9 49.4-67.5 82.4-38-40.9-90.9-64.2-147.3-64.2-110.9 0-201.1 90.2-201.1 201.1 0 40.5 12 79.5 34.7 112.9 18.6 27.4 43.4 49.6 72.4 65-25 11.3-47.7 27-67.5 46.9-43.3 43.3-67.2 100.7-67.2 161.6v164.7c0 50 40.7 90.8 90.8 90.8h276c36.4 0 69.3-22 83.5-55.2h247.7c50 0 90.8-40.7 90.8-90.8V648.9c-.3-60.9-24.1-118.3-67.5-161.5zM585.7 170.7c24.5-24.6 57.1-38.1 91.9-38.1 34.8 0 67.4 13.5 91.9 38.1 24.6 24.5 38.1 57.1 38.1 91.9S794 330 769.5 354.5c-24.5 24.6-57.1 38.1-91.9 38.1-34.8 0-67.4-13.5-91.9-38.1-24.6-24.5-38.1-57.1-38.1-91.9s13.5-67.4 38.1-91.9zM216.4 317.8c0-34.8 13.5-67.4 38.1-91.9 24.5-24.6 57.1-38.1 91.9-38.1 34.8 0 67.4 13.5 91.9 38.1 24.6 24.6 38.1 57.2 38.1 91.9 0 34.8-13.5 67.4-38.1 91.9-24.5 24.6-57.1 38.1-91.9 38.1-34.7 0-67.4-13.5-92-38.1-24.5-24.5-38-57.2-38-91.9zm287.6 551c0 5.2-2 10.1-5.8 13.8-3.7 3.7-8.6 5.8-13.8 5.8h-276c-10.8 0-19.6-8.8-19.6-19.6V704.1c0-41.9 16.4-81.4 46.3-111.3 29.9-29.9 69.4-46.3 111.3-46.3 41.9 0 81.4 16.4 111.3 46.3.5.5 1 1 1.3 1.4l.3.4c28.8 29.6 44.7 68.5 44.7 109.6v164.6zm-17.6-345.3c-14.3-11.2-29.7-20.5-46-27.9 39.7-21.1 71.5-55 89.8-96.1 15.4 16.5 33.4 30.4 53.3 40.9-25 11.3-47.7 27.1-67.5 46.9-11.1 11.2-21 23.3-29.6 36.2zm348.8 290.2c0 10.8-8.8 19.6-19.6 19.6H575.2V704.1c0-45.3-13.2-88.8-38.2-126.2 7.6-14.9 17.4-28.4 29.3-40.2 29.8-29.9 69.4-46.4 111.3-46.4 41.9 0 81.4 16.4 111.3 46.3 29.9 29.9 46.3 69.4 46.3 111.3v164.8z"
                  />
                </svg>
              </i>
              <span>
                Team
              </span>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
          <div />
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-file"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="file"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M875.1 301.8l-278-280.5c-4.5-4.5-9.5-8.3-14.8-11.5-1.4-.8-2.9-1.6-4.4-2.3-.9-.5-1.9-.9-2.8-1.3-9.1-4-19-6.2-29.1-6.2H200c-39.8 0-72 32.2-72 72v880c0 39.8 32.2 72 72 72h624c39.8 0 72-32.2 72-72V352.5c0-19-7.5-37.2-20.9-50.7zM783.8 312H584V110.4L783.8 312zM824 952H200V72h312v240c0 39.8 32.2 72 72 72h240v568z"
              />
            </svg>
          </i>
          <span>
            File
          </span>
        </li>
      </ul>
    </div>
    <div
      class="ant-layout-sider-trigger"
      style="width:200px"
    >
      <i
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-header"
      style="background:#fff;padding:0"
    />
    <div
      class="ant-layout-content"
      style="margin:0 16px"
    >
      <div
        class="ant-breadcrumb"
        style="margin:16px 0"
      >
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            User
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            Bill
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
      </div>
      <div
        style="padding:24px;background:#fff;min-height:360px"
      >
        Bill is a cat.
      </div>
    </div>
    <div
      class="ant-layout-footer"
      style="text-align:center"
    >
      Ant Design ©2018 Created by Ant UED
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/top.md correctly 1`] = `
<div
  class="layout ant-layout"
>
  <div
    class="ant-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
    </ul>
  </div>
  <div
    class="ant-layout-content"
    style="padding:0 50px"
  >
    <div
      class="ant-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          List
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          App
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      style="background:#fff;padding:24px;min-height:280px"
    >
      Content
    </div>
  </div>
  <div
    class="ant-layout-footer"
    style="text-align:center"
  >
    Ant Design ©2018 Created by Ant UED
  </div>
</div>
`;

exports[`renders ./components/layout/demo/top-side.md correctly 1`] = `
<div
  class="ant-layout"
>
  <div
    class="header ant-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
    </ul>
  </div>
  <div
    class="ant-layout-content"
    style="padding:0 50px"
  >
    <div
      class="ant-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          List
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          App
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      class="ant-layout"
      style="padding:24px 0;background:#fff"
    >
      <div
        class="ant-layout-sider ant-layout-sider-dark"
        style="background:#fff;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="ant-layout-sider-children"
        >
          <ul
            class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
            role="menu"
            style="height:100%"
          >
            <li
              class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected"
              role="menuitem"
            >
              <div
                aria-expanded="true"
                aria-haspopup="true"
                aria-owns="sub1$Menu"
                class="ant-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <i
                    class="anticon anticon-user"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="user"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M819.4 793c-16.8-39.7-40.9-75.4-71.5-106-30.6-30.6-66.3-54.7-106-71.5-13.5-5.7-27.4-10.5-41.4-14.4 39.6-13.4 75.9-35.8 106.3-66.2 52-52 80.7-121.2 80.7-194.7s-28.6-142.7-80.7-194.7c-52-52-121.2-80.7-194.7-80.7s-142.7 28.6-194.7 80.7c-52 52-80.7 121.2-80.7 194.7s28.6 142.7 80.7 194.7c30.4 30.4 66.7 52.8 106.3 66.2-14 3.9-27.9 8.6-41.4 14.4-39.7 16.8-75.4 40.9-106 71.5-30.6 30.6-54.7 66.3-71.5 106-17.4 41.2-26.2 84.8-26.2 129.9 0 19.9 16.1 36 36 36s36-16.1 36-36c0-69.9 27.2-135.6 76.6-185 49.4-49.4 115.1-76.6 185-76.6s135.6 27.2 185 76.6 76.6 115.1 76.6 185c0 19.9 16.1 36 36 36s36-16.1 36-36c-.2-45.1-9-88.7-26.4-129.9zM308.6 340.2c0-112.2 91.3-203.4 203.4-203.4S715.4 228 715.4 340.2 624.2 543.6 512 543.6s-203.4-91.3-203.4-203.4z"
                      />
                    </svg>
                  </i>
                  subnav 1
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <ul
                class="ant-menu  ant-menu-sub ant-menu-inline"
                id="sub1$Menu"
                role="menu"
              >
                <li
                  class="ant-menu-item ant-menu-item-selected"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option1
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option2
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option3
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option4
                </li>
              </ul>
            </li>
            <li
              class="ant-menu-submenu ant-menu-submenu-inline"
              role="menuitem"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="ant-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <i
                    class="anticon anticon-laptop"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="laptop"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M887.4 136.1v559.4H134.8V136.1h752.6m0-72H134.8c-39.8 0-72 32.2-72 72v559.4c0 39.8 32.2 72 72 72h752.6c39.8 0 72-32.2 72-72V136.1c0-39.8-32.3-72-72-72zM923.4 912.3H98.8c-19.9 0-36-16.1-36-36s16.1-36 36-36h824.6c19.9 0 36 16.1 36 36s-16.1 36-36 36z"
                      />
                    </svg>
                  </i>
                  subnav 2
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <div />
            </li>
            <li
              class="ant-menu-submenu ant-menu-submenu-inline"
              role="menuitem"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="ant-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <i
                    class="anticon anticon-notification"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="notification"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M922 377.7h-57.3v-17.6c0-27-21.3-49-47.4-49H645c-7.2-13.8-18-23.8-32.8-23.8-251.2 0-476.9-217.6-476.9-217.6C128 65.8 120.4 64 113 64c-24.7 0-47.2 19.8-47.2 47.2v801.1c0 27.6 22.6 47.2 47.2 47.2 8 0 16.3-2.1 24-6.7 0 0 208.5-260.4 478.1-260.4 13.8 0 23.7-9.3 30.3-22.2h4.1c1.4 60.3-12.7 124.5-25.8 170.8-7.6 26.9 3 55.2 26.4 70.5 10.6 6.9 22.7 10.4 34.7 10.4 14.4 0 28.7-5 40.5-14.7 69.2-57.5 95.1-123.6 104.7-168.9 6-28.3 6.5-52.2 5.8-68 3.6-4.6 7-9.6 10.3-14.6 18.7-28.7 18.7-39.8 18.7-45.1V588H922c19.9 0 36-16.1 36-36V413.7c0-19.9-16.1-36-36-36zM584.2 621.4c-61.3 3.9-123.6 19.1-185.7 45.4-56.3 23.9-112.5 57-167.1 98.4-37.6 28.5-69.2 57-93.7 81V166.6c26.4 21 61.8 47.1 103.8 73.1 55.2 34.2 110.9 61.6 165.6 81.3 60.2 21.7 119.4 34.3 176.4 37.5v1.7c0 2.3.2 4.5.6 6.6v253.5c.1.4.1.7.1 1.1zm208.5-16.8c-3.1 6.1-9.6 16.1-13.5 21.1-3.2 2-6.1 4.5-8.5 7.4-6.8 8.2-9.7 19-7.8 29.5 0 .2 4.1 25.8-3.3 60.8-8.6 40.8-28.4 77.2-58.9 108.6 14.5-58.5 26.7-133.7 18.1-202.3-2.3-18-17.6-31.5-35.7-31.5h-25.6v-29.9c0-3.3-.5-6.5-1.3-9.5V383.1h136.5v221.5zM886 516h-21.3v-66.3H886V516z"
                      />
                    </svg>
                  </i>
                  subnav 3
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <div />
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ant-layout-content"
        style="padding:0 24px;min-height:280px"
      >
        Content
      </div>
    </div>
  </div>
  <div
    class="ant-layout-footer"
    style="text-align:center"
  >
    Ant Design ©2018 Created by Ant UED
  </div>
</div>
`;

exports[`renders ./components/layout/demo/top-side-2.md correctly 1`] = `
<div
  class="ant-layout"
>
  <div
    class="header ant-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
    </ul>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-sider ant-layout-sider-dark"
      style="background:#fff;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
    >
      <div
        class="ant-layout-sider-children"
      >
        <ul
          class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
          role="menu"
          style="height:100%;border-right:0"
        >
          <li
            class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected"
            role="menuitem"
          >
            <div
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="sub1$Menu"
              class="ant-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <i
                  class="anticon anticon-user"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="user"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M819.4 793c-16.8-39.7-40.9-75.4-71.5-106-30.6-30.6-66.3-54.7-106-71.5-13.5-5.7-27.4-10.5-41.4-14.4 39.6-13.4 75.9-35.8 106.3-66.2 52-52 80.7-121.2 80.7-194.7s-28.6-142.7-80.7-194.7c-52-52-121.2-80.7-194.7-80.7s-142.7 28.6-194.7 80.7c-52 52-80.7 121.2-80.7 194.7s28.6 142.7 80.7 194.7c30.4 30.4 66.7 52.8 106.3 66.2-14 3.9-27.9 8.6-41.4 14.4-39.7 16.8-75.4 40.9-106 71.5-30.6 30.6-54.7 66.3-71.5 106-17.4 41.2-26.2 84.8-26.2 129.9 0 19.9 16.1 36 36 36s36-16.1 36-36c0-69.9 27.2-135.6 76.6-185 49.4-49.4 115.1-76.6 185-76.6s135.6 27.2 185 76.6 76.6 115.1 76.6 185c0 19.9 16.1 36 36 36s36-16.1 36-36c-.2-45.1-9-88.7-26.4-129.9zM308.6 340.2c0-112.2 91.3-203.4 203.4-203.4S715.4 228 715.4 340.2 624.2 543.6 512 543.6s-203.4-91.3-203.4-203.4z"
                    />
                  </svg>
                </i>
                subnav 1
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
            <ul
              class="ant-menu  ant-menu-sub ant-menu-inline"
              id="sub1$Menu"
              role="menu"
            >
              <li
                class="ant-menu-item ant-menu-item-selected"
                role="menuitem"
                style="padding-left:48px"
              >
                option1
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option2
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option3
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option4
              </li>
            </ul>
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-inline"
            role="menuitem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <i
                  class="anticon anticon-laptop"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="laptop"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M887.4 136.1v559.4H134.8V136.1h752.6m0-72H134.8c-39.8 0-72 32.2-72 72v559.4c0 39.8 32.2 72 72 72h752.6c39.8 0 72-32.2 72-72V136.1c0-39.8-32.3-72-72-72zM923.4 912.3H98.8c-19.9 0-36-16.1-36-36s16.1-36 36-36h824.6c19.9 0 36 16.1 36 36s-16.1 36-36 36z"
                    />
                  </svg>
                </i>
                subnav 2
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-inline"
            role="menuitem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <i
                  class="anticon anticon-notification"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="notification"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M922 377.7h-57.3v-17.6c0-27-21.3-49-47.4-49H645c-7.2-13.8-18-23.8-32.8-23.8-251.2 0-476.9-217.6-476.9-217.6C128 65.8 120.4 64 113 64c-24.7 0-47.2 19.8-47.2 47.2v801.1c0 27.6 22.6 47.2 47.2 47.2 8 0 16.3-2.1 24-6.7 0 0 208.5-260.4 478.1-260.4 13.8 0 23.7-9.3 30.3-22.2h4.1c1.4 60.3-12.7 124.5-25.8 170.8-7.6 26.9 3 55.2 26.4 70.5 10.6 6.9 22.7 10.4 34.7 10.4 14.4 0 28.7-5 40.5-14.7 69.2-57.5 95.1-123.6 104.7-168.9 6-28.3 6.5-52.2 5.8-68 3.6-4.6 7-9.6 10.3-14.6 18.7-28.7 18.7-39.8 18.7-45.1V588H922c19.9 0 36-16.1 36-36V413.7c0-19.9-16.1-36-36-36zM584.2 621.4c-61.3 3.9-123.6 19.1-185.7 45.4-56.3 23.9-112.5 57-167.1 98.4-37.6 28.5-69.2 57-93.7 81V166.6c26.4 21 61.8 47.1 103.8 73.1 55.2 34.2 110.9 61.6 165.6 81.3 60.2 21.7 119.4 34.3 176.4 37.5v1.7c0 2.3.2 4.5.6 6.6v253.5c.1.4.1.7.1 1.1zm208.5-16.8c-3.1 6.1-9.6 16.1-13.5 21.1-3.2 2-6.1 4.5-8.5 7.4-6.8 8.2-9.7 19-7.8 29.5 0 .2 4.1 25.8-3.3 60.8-8.6 40.8-28.4 77.2-58.9 108.6 14.5-58.5 26.7-133.7 18.1-202.3-2.3-18-17.6-31.5-35.7-31.5h-25.6v-29.9c0-3.3-.5-6.5-1.3-9.5V383.1h136.5v221.5zM886 516h-21.3v-66.3H886V516z"
                    />
                  </svg>
                </i>
                subnav 3
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-layout"
      style="padding:0 24px 24px"
    >
      <div
        class="ant-breadcrumb"
        style="margin:16px 0"
      >
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            Home
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            List
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            App
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
      </div>
      <div
        class="ant-layout-content"
        style="background:#fff;padding:24px;margin:0;min-height:280px"
      >
        Content
      </div>
    </div>
  </div>
</div>
`;
